# Falter

./: .gitignore  CMakeLists.txt  README.md  TODO.md
JUCE/extras/AudioPerformanceTest/Source/: MainComponent.h
JUCE/extras/Projucer/JuceLibraryCode/: BinaryData.cpp
JUCE/modules/juce_audio_basics/buffers/: juce_AudioChannelSet.cpp  juce_AudioChannelSet.h  juce_AudioDataConverters.cpp  juce_AudioDataConverters.h  juce_AudioSampleBuffer.h
JUCE/modules/juce_audio_basics/mpe/: juce_MPEUtils.cpp  juce_MPEUtils.h
JUCE/modules/juce_audio_basics/native/: juce_mac_CoreAudioLayouts.h
JUCE/modules/juce_audio_basics/sources/: juce_BufferingAudioSource.cpp  juce_ChannelRemappingAudioSource.cpp  juce_IIRFilterAudioSource.cpp  juce_MemoryAudioSource.cpp  juce_MixerAudioSource.cpp  juce_ResamplingAudioSource.cpp  juce_ResamplingAudioSource.h  juce_ReverbAudioSource.cpp  juce_ToneGeneratorAudioSource.cpp
JUCE/modules/juce_audio_basics/synthesisers/: juce_Synthesiser.cpp
JUCE/modules/juce_audio_basics/utilities/: juce_ADSR.h  juce_ADSR_test.cpp  juce_Reverb.h  juce_SmoothedValue.h
JUCE/modules/juce_audio_devices/audio_io/: juce_AudioDeviceManager.cpp  juce_AudioDeviceManager.h
JUCE/modules/juce_audio_devices/native/: juce_android_Audio.cpp  juce_android_Oboe.cpp  juce_android_OpenSL.cpp  juce_ios_Audio.cpp  juce_linux_ALSA.cpp  juce_mac_CoreAudio.cpp  juce_win32_DirectSound.cpp  juce_win32_WASAPI.cpp
JUCE/modules/juce_audio_devices/sources/: juce_AudioSourcePlayer.cpp  juce_AudioTransportSource.cpp  juce_AudioTransportSource.h
JUCE/modules/juce_audio_formats/codecs/: juce_MP3AudioFormat.cpp  (+7 more)
cmake/: FindLuaJit.cmake
src/: AltarButton.cpp  AltarButton.h  AltarClip.cpp  AltarClip.h  AltarClipList.cpp  AltarClipList.h  AltarList.cpp  AltarList.h  AltarLogger.cpp  AltarLogger.h  AltarThread.cpp  AltarThread.h  AltarThreadList.cpp  AltarThreadList.h  AudioLoadThread.cpp  AudioLoadThread.h  AudioRecorder.cpp  AudioRecorder.h  DragAndDropTypes.cpp  DragAndDropTypes.h  Faltar_Juce.code-workspace  FalterAudioDeviceSelector.cpp  FalterAudioDeviceSelector.h  FalterButton.cpp  FalterButton.h  FalterClip.cpp  FalterClip.h  FalterClipList.cpp  FalterClipList.h  FalterFileBrowser.cpp  FalterFileBrowser.h  FalterList.cpp  FalterList.h  FalterLogger.cpp  FalterLogger.h  FalterLookAndFeel.cpp  FalterLookAndFeel.h  FalterPlayer.cpp  FalterPlayer.h  FalterThread.cpp  (+9 more)
src/Falter-LLS/: config.json
src/Lua/: Audio.cpp  Audio.h  AudioMod.cpp  AudioMod.h  ExtraCheckFuncs.cpp  ExtraCheckFuncs.h  Function.cpp  Function.h  GlobalFunctions.cpp  GlobalFunctions.h  Interpolators.cpp  Interpolators.h  LTMP.cpp  LTMP.h  PV.cpp  PV.h  PVOC.cpp  PVOC.h  Usertypes.cpp  Usertypes.h  Utility.cpp  Utility.h  VecMethods.cpp  VecMethods.h  Wavetable.cpp  Wavetable.h
src/simplefilewatcher/: FileWatcherWin32.cpp
(+102 files in other folders)
